tests/suite/fail/generated/types/fail_div_bool_f64.ny
fn main() {
    let _ = true / 1.0 //~ ERROR Type mismatch in arithmetic
}
